--- a/www/spaserve/main.html
+++ b/www/spaserve/main.html
@@ -5,7 +5,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, shrink-to-fit=no, user-scalable=no">
-    <title>MediaStore - leuffen.de</title>
+    <title>AiWriter - leuffen.de</title>
 
 
     <link rel="stylesheet" href="_vendor/@.css">
